# claude-slack-bridge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: e2e.yml  release.yml  scorecard.yml  security.yml
rust/: Cargo.toml  README.md  deny.toml
rust/src/: app.rs  claude_runner.rs  config.rs  lib.rs  notify.rs  slack.rs  stop_hook.rs  store.rs
rust/tests/: runner.rs  spec.rs  stop_hook_timing.rs
spec/: README.md  scenarios.json
src/: app.rs  claude_runner.rs  cli.rs  config.rs  config_file.rs  daemon.rs  lib.rs  notify.rs  slack.rs  stop_hook.rs  store.rs
src/slack_claude_bridge/: __init__.py  app.py  claude_runner.py  config.py  job.py  notify.py  stop_hook.py  store.py
tests/: cli.rs  conftest.py  fake_claude.py  runner.rs  spec.rs  stop_hook_timing.rs  test_app_flow.py  test_claude_runner.py  test_spec.py  test_stop_hook.py  test_store.py
