[package]
name = "slack-claude-bridge"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Run long Claude Code jobs from Slack and reply from your phone — a Socket Mode bridge."
authors = ["pomcho555"]
repository = "https://github.com/pomcho555/claude-slack-bridge"
homepage = "https://github.com/pomcho555/claude-slack-bridge"
readme = "README.md"
keywords = ["slack", "claude", "claude-code", "bot", "socket-mode"]
categories = ["command-line-utilities", "development-tools"]
# Keep the published crate lean; the README image still renders on crates.io
# (relative links are rewritten to the repository).
exclude = ["/assets", "/.github"]
autobins = false
default-run = "slack-claude-bridge"

[lib]
name = "slack_claude_bridge"
path = "src/lib.rs"

[[bin]]
name = "slack-claude-bridge"
path = "src/bin/bridge.rs"

[[bin]]
name = "slack-claude-job"
path = "src/bin/job.rs"

[[bin]]
name = "slack-claude-notify"
path = "src/bin/notify.rs"

[[bin]]
name = "slack-claude-stop-hook"
path = "src/bin/stop_hook.rs"

# Test fixture (fake `claude` CLI); located by tests via CARGO_BIN_EXE_fake_claude.
[[bin]]
name = "fake_claude"
path = "src/bin/fake_claude.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
dotenvy = "0.15"
slack-morphism = { version = "2.22.0", features = ["hyper"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
