[project]
name = "slack-claude-bridge"
version = "0.1.0"
description = "Bridge Slack <-> Claude Code so you can run long jobs and reply from your phone"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18",
    "python-dotenv>=1.0",
]

[project.scripts]
slack-claude-bridge = "slack_claude_bridge.app:main"
slack-claude-job = "slack_claude_bridge.job:run_job_main"
slack-claude-notify = "slack_claude_bridge.job:notify_main"
slack-claude-stop-hook = "slack_claude_bridge.stop_hook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_claude_bridge"]
